fix(front): #3233 fix white spaces in the banner
- fixed a space in the banner for large screens above 1920px of width


Former-commit-id: d518a9f5ccc7912e813254d6b1f843ba04c37b1e

--- a/new/theme/2020/static/scss/base.scss
+++ b/new/theme/2020/static/scss/base.scss
@@ -158,7 +158,7 @@ $codeyellow: rgba(230, 219, 116, 1);
 .f-sub { font-size: 1.9rem; }
 .right-small { right: .6rem; }
 .nbs {margin-bottom: -.15rem; }
-.banner-height { height: 21.875rem; }
+.banner-height { height: 350px; }
 .lh3 { line-height: 3rem; }
 .w-small {width: .5rem; }
 .hv-svg-red { &:hover { fill: $button-hover; } }
